# Jack-Compiler

./: .clang-format  .clang-tidy  .gitmodules  CMakeLists.txt  Error.h  JackCompiler.cpp  JackCompiler.h  README.md  SymbolTable.cpp  SymbolTable.h  VMWriter.cpp  VMWriter.h  compilation_engine.cpp  compilation_engine.h  enums.h  label_generator.h  tests.vm  tokenizer.h  vm_writer.h
include/: JackCompiler.h  Token.h  enums.h  hack_map.h  tokenizer.h
src/: JackCompiler.cpp  SymbolTable.cpp  compilation_engine.cpp  hack_map.cpp  label_generator.cpp  main.cpp  tokenizer.cpp  vm_writer.cpp
tests/: array_complex.vm  array_test.jack  array_test.vm  point.jack  point.vm  test.jack  test.vm  test.xml
tests/os/: Maths.jack  Maths.vm  Memory.jack  Memory.vm  Screen.jack
